--- a/assets/css/small-default.css
+++ b/assets/css/small-default.css
@@ -379,12 +379,16 @@ body {
 
 /* tasks section */
 
+.tasks-img {
+  line-height: 0;
+}
+
 .tasks-explanation {
   margin: 1rem 0;
 }
 
 .task {
-  margin: 1rem 0;
+  margin: 0.5rem 0;
   border: 1px solid #e5e5e5;
 }
 
@@ -398,7 +402,7 @@ body {
   display: block;
   padding: 1.3rem 2rem 1.3rem 3.5rem;
   font-family: Montserrat;
-  font-size: 1.1em;
+  font-weight: 500;
   text-transform: uppercase;
 }
 
@@ -411,7 +415,7 @@ body {
 .task-header__right-icon {
   position: absolute;
   right: 1rem;
-  top: 1.6rem;
+  top: 1.5rem;
 }
 
 .task-body {
@@ -452,6 +456,15 @@ body {
   border-radius: 3px;
 }
 
+.task:nth-of-type(2) .task-header,
+.task:nth-of-type(3) .task-header{
+  border: none;
+}
+
+.task:nth-of-type(2) .task-body,
+.task:nth-of-type(3) .task-body{
+  display: none;
+}
 
 /* testimonials section */
 
